{
    "name": "XRControllerAppInput",
    "maps": [
        {
            "name": "LeftHand",
            "id": "49c89128-926e-4615-9ea6-d146629b0e00",
            "actions": [
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "0c26715b-1bd7-49d6-8575-062aee127619",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a3a895f4-d950-4175-992b-6d526b9f1e71",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "19aa2d11-40bd-40d2-b84d-019ce06dfa3d",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightHand",
            "id": "5b62d2b5-9bc7-442e-987c-501e86f5c6b6",
            "actions": [
                {
                    "name": "ToggleMenu",
                    "type": "Button",
                    "id": "c5eabf96-96d1-4047-98cc-aa12ffcc9dce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "7da5e4c1-1e04-46e5-a48c-6c680112f5ff",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d889731-aced-41b2-96bc-c66069ad6a6d",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Generic XR Controller",
                    "action": "ToggleMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Generic XR Controller",
            "bindingGroup": "Generic XR Controller",
            "devices": [
                {
                    "devicePath": "<XRController>{LeftHand}",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>{RightHand}",
                    "isOptional": true,
                    "isOR": false
                },
                {
                    "devicePath": "<XRController>",
                    "isOptional": true,
                    "isOR": false
                }
            ]
        }
    ]
}